--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,9 @@
 DEBUG = 1
 SECRET_KEY = django-insecure-7g0ry)=@gask$_!_rgb=u@%2fh947al&^y6hovfl!q8@h!(38x
 DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1 [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=do_it_django_dev
+SQL_USER=do_it_django_db_user
+SQL_PASSWORD=do_it_django_db_password
+SQL_HOST=db
+SQL_PORT=5432
